logs/2024-02-01-16-28/lists/failed/cisPath
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''cisPath'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-23 r85822)
Installing package(s) 'cisPath'
trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/cisPath_1.43.0.tar.gz'
Content type 'application/x-gzip' length 955053 bytes (932 KB)
==================================================
downloaded 932 KB

* installing *source* package ‘cisPath’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c cisPath.cpp -o cisPath.o
cisPath.cpp: In function ‘bool processWebInput(const char*, bool, bool)’:
cisPath.cpp:3555:27: error: format not a string literal and no format arguments [-Werror=format-security]
 3555 |             PRINTFUNCTION(buffer);
      |                           ^~~~~~
cc1plus: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:200: cisPath.o] Error 1
ERROR: compilation failed for package ‘cisPath’
* removing ‘/tmp/tmp/built/cisPath’

The downloaded source packages are in
	‘/tmp/Rtmp2KMfp3/downloaded_packages’
Old packages: 'commonmark', 'httpuv', 'zip'
Warning message:
In install.packages(...) :
  installation of package ‘cisPath’ had non-zero exit status

real	0m9.653s
user	0m7.050s
sys	0m0.676s
